2006-09-21 02:57:37  Sean Middleditch <elanthis@awesomeplay.com>

  * Updated player and npc types to use the new fileobj list
    construct.
  * Updated the skill info format to prepare for pure-skill system,
    including dynamic XP pools and the removal of hard-coded stats.

2006-09-17 22:26:46  Sean Middleditch <elanthis@awesomeplay.com>

  * Added a new list type to the fileobj format, which is currently
    used by the races file.
  * Cleaned up the fileobj API to remove all legacy cruft.

2006-09-17 18:04:14  Sean Middleditch <elanthis@awesomeplay.com>

  * More work on updating the events in use.

2006-09-17 05:01:57  Sean Middleditch <elanthis@awesomeplay.com>

  * New event system semantics.
  * Removed object action code, as the new event semantics
    super-cede it.

2006-09-15 22:09:01  Sean Middleditch <elanthis@awesomeplay.com>

  * Many portal updates.
  * The example.zone was very incomplete and buggy, and with the new
    portal changes, required a lot of work to update.  Began writing
    a new example world (pulled straight from the arse as I go).
  * Fixed error message on unknown attributes in fileobj files.

2006-09-12 02:35:25  Sean Middleditch <elanthis@awesomeplay.com>

  * Began restructing the portal system.  All portals will now be
    shared between room instances, unless the portal is explicitly
    marked one way.  This means that each portal has to be added to
    only a single room in the .zone files, and it will automatically
    register itself with the target room on load up.  Or will,
    at least; that's not yet complete.

2006-09-11 01:47:43  Sean Middleditch <elanthis@awesomeplay.com>

  * Updated the manifest file code.

2006-09-10 04:21:25  Sean Middleditch <elanthis@awesomeplay.com>

  * Added a new manifest.txt parser/generator.  These files are
    used to list other files.  Brilliant, isn't it?
  * Updated the script loader, AI loader, HTML template loader,
    and help file loader to use the new manifest.txt support