@@ -2,6 +2,8 @@ account.name = "Administrator"
 account.email = "awemud@localhost"
 account.passphrase = "$1$tNUNjzkD$F.tONxYNdR8hpYwuekqr7/"
 account.character = "Admin"
+account.created = "2000-01-01 00:00:00 EST"
+account.lastlogin = "2006-09-22 13:27:07 EDT"
 account.access = "gm"
 account.access = "admin"
 account.access = "builder"
